--- a/PalEats/PalEats/PalEats.csproj
+++ b/PalEats/PalEats/PalEats.csproj
@@ -30,6 +30,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\ShoppingListModal.xaml.cs">
+      <DependentUpon>ShoppingListModal.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ShoppingListModal.xaml.cs">
+      <DependentUpon>ShoppingListModal.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Views\CategoryPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -39,7 +48,7 @@
     <EmbeddedResource Update="Views\NavigationComponent.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\PopUpPage.xaml">
+    <EmbeddedResource Update="Views\ShoppingListModal.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\RecipePage.xaml">
